<resources>
    <string name="app_name">Vocabulary</string>
    <string name="support_email" translatable="false">asukix@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_books">Books</string>
    <string name="menu_lessons">Lessons</string>
    <string name="menu_languages">Words by languages</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Button labels -->
    <string name="ready">Ready</string>
    <string name="delete">Delete</string>

    <!-- Activities Labels -->
    <string name="book_title">Book Title</string>
    <string name="book_language_1">1st Language</string>
    <string name="book_language_2">2nd Language</string>
    <string name="lesson">Lesson</string>
    <string name="add">Add</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>

    <!-- Fab Icon titles -->
    <string name="add_book">New book</string>
    <string name="add_lesson">New lesson</string>
    <string name="add_word">New word</string>
    <string name="edit_mode">Edit mode</string>

    <!-- Errors -->
    <string name="all_fields_are_required_error">All fields are required!</string>
    <string name="add_book_first_error">Add books at first!</string>
    <string name="the_book_is_exists_error">The book tittle is already exists!</string>
    <string name="the_lesson_is_exists_error">The lesson tittle is already exists!</string>
</resources>
