<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listViewBooksBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        app:fab_size="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_icon="@drawable/ic_add"
        app:menu_labels_colorNormal="@color/white"
        app:menu_labels_colorPressed="@color/colorAccent"
        app:menu_labels_showShadow="true"
        app:menu_labels_textColor="@color/black"
        app:menu_openDirection="up"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabEditMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_label="@string/edit_mode"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_word"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_label="@string/add_word"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lesson"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_label="@string/add_lesson"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_books_white"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_label="@string/add_book"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>
</androidx.constraintlayout.widget.ConstraintLayout>