<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:menu_labels_textColor="@color/black"
        app:menu_labels_colorNormal="@color/white"
        app:menu_labels_colorPressed="@color/colorAccent"
        app:fab_size="normal"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_icon="@drawable/ic_add"
        app:menu_labels_showShadow="true"
        app:menu_openDirection="up"
        app:menu_showShadow="true"
        android:layout_gravity="bottom|right">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabEditMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/edit_mode"
            android:src="@drawable/ic_edit"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/add_word"
            android:src="@drawable/ic_word"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/add_lesson"
            android:src="@drawable/ic_lesson"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/add_book"
            android:src="@drawable/ic_books_white"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>