<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Editors.BookEditorActivity">

    <TextView
        android:id="@+id/textViewBookTitleBookEdit"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBookTitleBookEdit"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitleBookEdit" />

    <TextView
        android:id="@+id/textViewLanguage1BookEdit"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/book_language_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBookTitleBookEdit" />

    <TextView
        android:id="@+id/textViewLanguage2BookEdit"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/book_language_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFirstLanguageBookEditor" />

    <EditText
        android:id="@+id/editTextLanguage2BookEdit"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguage2BookEdit" />

    <Spinner
        android:id="@+id/spinnerFirstLanguageBookEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguage1BookEdit"
        app:layout_constraintVertical_bias="0.41" />

    <ImageView
        android:id="@+id/buttonReadyBookEdit"
        style="@style/ButtonReady"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:onClick="modifyReadyBookEdit"
        app:layout_constraintTop_toBottomOf="@+id/editTextLanguage2BookEdit"
        tools:layout_editor_absoluteX="64dp" />
</androidx.constraintlayout.widget.ConstraintLayout>